--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>5201314 私 与 杨NN - </title>
+<title>day100 肖杰 与刘佳慧 - </title>
 
 <style type="text/css">
 @font-face {
@@ -24,24 +24,24 @@
 	<div id="content">
 		<div id="code">
 			<span class="comments">/**</span><br />
-			<span class="space"/><span class="comments">*2015—06-26(My birthday),</span><br />
-			<span class="space"/><span class="comments">*2016-05-20(Valentine's Day).</span><br />
+			<span class="space"/><span class="comments">*2016—06-30(We are in love),</span><br />
+			<span class="space"/><span class="comments">*2016-10-07(Fall in love for 100 days).</span><br />
 			<span class="space"/><span class="comments">*/</span><br />
-			Boy name = <span class="keyword">Mr</span> Wu<br />
-			Girl name = <span class="keyword">Mrs</span> Yang<br />
-			<span class="comments">// Fall in love playground. </span><br />
-			The boy love the girl;<br />
-			<span class="comments">// But the girl doesn't know.</span><br />
-			<span class="comments">// The boy like to look at her smile.</span><br />
+			Boy name = <span class="keyword">Mr</span> Xiao<br />
+			Girl name = <span class="keyword">Mrs</span> Liu<br />
+			<span class="comments">// 15 years of acquaintance. </span><br />
+			The boy Familiar with the girl.<br />
+			<span class="comments">// But they were not together in the past.</span><br />
+			<span class="comments">// The boy like to play in GuangBa.</span><br />
 			The girl is very nice to laugh.<br />
 			<span class="comments">// AS time goes on.</span><br />
-			The boy decided to go after her;<br />
+			The boy decided to proposed to her when birthday;<br />
 			<span class="comments">// At the same time.</span><br />
-			The girl has been studying,exam;<br />
-			<span class="comments">// Both wind and snow all over the sky.</span><br />
-			<span class="comments">// Every time he saw her.</span><br />
+			The girl was very happy, agreed;<br />
+			<span class="comments">// In the chaotic bar.</span><br />
+			<span class="comments">// Many people witnessed their proposal.</span><br />
 			<span class="keyword">The boy</span> very <span class="keyword">happy</span>;<br />
-			<span class="keyword">The girl</span> is  very <span class="keyword">quiet and beautiful</span>;<br />
+			<span class="keyword">The girl</span> was  very <span class="keyword">moved</span>;<br />
 			<span class="placeholder"/><span class="comments">// Whether it is right now</span><br />
 			<span class="placeholder"/><span class="comments">// Still in the distant future.</span><br />
 			<span class="placeholder"/>The boy has but one dream;<br />
@@ -55,12 +55,12 @@
 			<canvas id="garden"></canvas>
 			<div id="words">
 				<div id="messages">
-					亲爱的，这是我爱上你的时间。
+					亲爱的，这是我们相爱的时间。
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
-					想换个方式去爱你，疼你。<br/>
-					<div class="signature">- 吴先生</div>
+					我会一直爱你，疼你。<br/>
+					<div class="signature">- 肖先生</div>
 				</div>
 			</div>
 		</div>
@@ -71,7 +71,7 @@
 var offsetX = $("#loveHeart").width() / 2;
 var offsetY = $("#loveHeart").height() / 2 - 55;
 var together = new Date();
-together.setFullYear(2015, 05, 15);
+together.setFullYear(2016, 05, 28);
 together.setHours(20);
 together.setMinutes(0);
 together.setSeconds(0);
